# surfboard_notifier

./: .gitignore  LICENSE  README.md  config.py  craigslist_debug.html  craigslist_scraper.py  env_example.txt  gemini_classifier.py  marketplace_scraper.py  notifier.py  pyproject.toml  requirements.txt  setup.py  surfboard_monitor.py  test_craigslist.py
docs/: README.md
scripts/: legacy_surfboard_monitor.py
src/: main.py
src/surfboard_monitor/: __init__.py  config.py
src/surfboard_monitor/ai/: __init__.py  gemini_classifier.py  prompts.py
src/surfboard_monitor/core/: __init__.py  monitor.py
src/surfboard_monitor/notifications/: __init__.py  notifier.py
src/surfboard_monitor/scrapers/: __init__.py  craigslist_scraper.py
tests/: test_basic.py
tests/surfboard_monitor/: test_config.py
tests/surfboard_monitor/ai/: test_gemini_classifier.py
tests/surfboard_monitor/core/: test_monitor.py
tests/surfboard_monitor/notifications/: test_notifier.py
tests/surfboard_monitor/scrapers/: test_craigslist_scraper.py
